# unity8

./: .bzrignore  CMakeLists.txt  CODING  COPYING  Makefile  README.md  README.translations  README.txt  SettingsComponents.desktop  SettingsComponents.qml  SettingsComponents.qmlproject  Shell.qml  SystemComponents.desktop  SystemComponents.qml  SystemComponents.qmlproject  TODO  apparmor.json  build.sh  com.ubuntu.reminders.desktop.in  com.ubuntu.reminders.desktop.in.in  com.ubuntu.reminders_reminders.application  com.ubuntu.reminders_reminders.application.in  deployment.pri  manifest.json  manifest.json.in  push-helper.apparmor  push-helper.json  reminders-app  reminders-app.desktop  reminders-app.in  reminders-app.pro  reminders-app.qml  reminders-app.qmlproject  reminders.apparmor  reminders.url-dispatcher  run  run.sh  run_on_ubuntu_touch.sh  run_python_static_tests.sh  runscene.sh  (+1 more)
Ubuntu/Settings/Components/: ActionTextField.qml  CMakeLists.txt  Calendar.qml  Components.qmltypes  HeroMessageHeader.qml  IconVisual.qml  MessageHeader.qml  QuickReply.qml  StatusIcon.qml  SyncCheckBox.qml  SyncSwitch.qml  UbuntuShapeForItem.qml  dateExt.js  plugin.cpp  plugin.h  qmldir  serveractivationsync.cpp  serveractivationsync.h  serverpropertysynchroniser.cpp  serverpropertysynchroniser.h  signalbinder.cpp  signalbinder.h
Ubuntu/Settings/Menus/: AccessPointMenu.qml  ButtonMenu.qml  CMakeLists.txt  CalendarMenu.qml  CheckableMenu.qml  EventMenu.qml  GroupedMessageMenu.qml  HeroMessageMenu.qml  MediaPlayerMenu.qml  Menus.qmltypes  PlaybackItemMenu.qml  ProgressBarMenu.qml  ProgressValueMenu.qml  SectionMenu.qml  SeparatorMenu.qml  SimpleMessageMenu.qml  SimpleTextMessageMenu.qml  SliderMenu.qml  SnapDecisionMenu.qml  StandardMenu.qml  SwitchMenu.qml  TextMessageMenu.qml  TimeZoneMenu.qml  TransferMenu.qml  UserSessionMenu.qml  plugin.cpp  plugin.h  pluginglobal.h  qmldir  types.h
click/: CMakeLists.txt  apparmor.json  manifest.json.in
data/: CMakeLists.txt  com.canonical.Unity8.gschema.xml  unity8-dash.desktop.in  unity8-filewatcher.conf  unity8-greeter.desktop.in  unity8.conf  unityscreenshot
plugins/LightDM/liblightdm/: CMakeLists.txt  GreeterPrivate.cpp  UsersModel.cpp
plugins/Powerd/: CMakeLists.txt  Powerd.cpp  Powerd.h
src/account-plugin/: CMakeLists.txt
src/account-plugin/sandbox/: CMakeLists.txt
src/app/: CMakeLists.txt  accountpreference.cpp  accountpreference.h  app.pro  camerahelper.cpp  camerahelper.h  formattinghelper.cpp  formattinghelper.h  main.cpp  preferences.cpp  preferences.h
src/app/qml/: reminders-app.qml  reminders.qml
src/libqtevernote/: CMakeLists.txt  evernoteconnection.cpp  evernoteconnection.h  logging.cpp  logging.h  note.cpp  note.h  notebook.cpp  notebook.h  notebooks.cpp  notebooks.h  notes.cpp  notes.h  notesstore.cpp  notesstore.h  resource.cpp  resource.h  resourceimageprovider.cpp  resourceimageprovider.h  tag.cpp  tag.h  tags.cpp  tags.h  userstore.cpp  userstore.h
src/libqtevernote/jobs/: createnotebookjob.cpp  createnotebookjob.h  createnotejob.cpp  createnotejob.h  createtagjob.cpp  createtagjob.h  deletenotejob.cpp  evernotejob.cpp  evernotejob.h  expungenotebookjob.cpp  fetchnotebooksjob.cpp  fetchnotebooksjob.h  fetchnotejob.cpp  fetchnotejob.h  fetchnotesjob.cpp  fetchnotesjob.h  fetchtagsjob.cpp  fetchusernamejob.cpp  fetchusernamejob.h  notesstorejob.cpp  savenotebookjob.cpp  savenotebookjob.h  savenotejob.cpp  savenotejob.h  savetagjob.cpp  savetagjob.h  userstorejob.cpp
src/libqtevernote/utils/: enmldocument.cpp  enmldocument.h  organizeradapter.cpp  organizeradapter.h  textformat.cpp
src/plugin/Evernote/: CMakeLists.txt  Evernote.pro  evernoteconnection.cpp  evernoteconnection.h  evernoteplugin.cpp  evernoteplugin.h  fetchnotebooksjob.cpp  fetchnotebooksjob.h  fetchnotejob.cpp  fetchnotejob.h  fetchnotesjob.cpp  fetchnotesjob.h  note.cpp  note.h  notebook.cpp  notebook.h  notebooks.cpp  notebooks.h  notes.cpp  notes.h  notesstore.cpp  notesstore.h  qmldir  resource.cpp  resource.h  resourceimageprovider.cpp  tag.cpp  tag.h  tags.cpp  tags.h  userstore.cpp  userstore.h
src/push-helper/: CMakeLists.txt  core.cpp  core.h  main.cpp
tests/: CMakeLists.txt
tests/autopilot/: CMakeLists.txt  run
tests/autopilot/reminders/: __init__.py  credentials.py  emulators.py  evernote.py  fake_services.py  fixture_setup.py
tests/autopilot/reminders_app/: __init__.py  emulators.py
tests/autopilot/unity8/: __init__.py  dash.py  fixture_setup.py  phone_stage.py  process_helpers.py  tutorial.py
tests/imports/: check_imports.py
tests/mocks/: CMakeLists.txt
tests/mocks/AccountsService/: AccountsService.cpp  AccountsService.h  CMakeLists.txt
tests/mocks/Cursor/: CMakeLists.txt  Cursor.qml  WindowedMousePointer.cpp  WindowedMousePointer.h  plugin.cpp  plugin.h  qmldir
tests/mocks/GSettings.1.0/: fake_gsettings.cpp  fake_gsettings.h
tests/mocks/Infographics/: CMakeLists.txt  InfographicList.qml  qmldir
tests/mocks/LightDM/: CMakeLists.txt  UsersModel.cpp  UsersModel.h  UsersModelPrivate.h
tests/mocks/Powerd/: Powerd.cpp  Powerd.h
tests/mocks/QMenuModel/: QMenuModel.qmltypes  unitymenumodel.cpp  unitymenumodel.h
tests/mocks/Unity/: CMakeLists.txt  Unity.qmltypes  fake_categories.cpp  fake_scope.cpp  fake_scope.h  fake_scopes.cpp  fake_scopesoverview.cpp
tests/mocks/Utils/: CMakeLists.txt  constants.cpp  constants.h  plugin.cpp  qmldir  windowstatestorage.cpp  (+1 more)
tests/qmltests/: ApplicationMenuDataLoader.qml  CMakeLists.txt  tst_ButtonMenu.qml  tst_Calendar.qml  tst_CalendarMenu.qml  tst_DisabledScreenNotice.qml  tst_EventMenu.qml  tst_MediaPlayerMenu.qml  tst_OrientedShell.qml  tst_ProgressBarMenu.qml  tst_Shell.qml  tst_ShellWithPin.qml  tst_SliderMenu.qml  tst_TimeZoneMenu.qml  tst_UserSessionMenu.qml
tests/qmluitests/: CMakeLists.txt  tst_ButtonMenu.qml  tst_Calendar.qml  tst_CalendarMenu.qml  tst_EventMenu.qml  tst_MediaPlayerMenu.qml  tst_ProgressBarMenu.qml  tst_SliderMenu.qml  tst_TimeZoneMenu.qml  tst_UserSessionMenu.qml  utils.js
tests/uqmlscene/: CMakeLists.txt  main.cpp
tests/utils/: CMakeLists.txt
(+1120 files in other folders)
